Added colors in tailwind.config.js. Removed old images, and added new images in /img/. Updated nioh2_TODO.txt. Changed cards in nioh2.html.

--- a/nioh2/nioh2.html
+++ b/nioh2/nioh2.html
@@ -222,56 +222,53 @@
     <section class="mx-auto mt-6 gap-4
         lg:w-[1320px] lg:mt-12 lg:mb-[200px] lg:grid lg:grid-cols-3">
 
-        <!-- GRID:
-
-            Card 1              |       Card 2          |       Card 3
-            Card 4              |       Card 5          |       Card 6
+        <!-- 
+        ==========
+        GRID:
+        ==========
+            Card 1  |   Card 2  |   Card 3
+            Card 4  |   Card 5  |   Card 6
         -->
 
         <!-- ========== ==========
         Basics (Main Card 1)
         ========== ========== -->
-        <div class="my-6 lg:my-0 w-full md:h-[550px] p-6 rounded-xl flex flex-col items-start bg-medium-gray">
+        <div class="mask my-6 lg:my-0 md:h-[660px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
             <!-- ========== 
             top row 
             ========== -->
-            <div class="w-full flex justify-between items-center">
-                <!-- Icon and Text -->
-                <div class="flex items-center gap-4">
-                    <!-- Icon -->
-                    <img src="./img/basics_icon.png" alt="">
-
-                    <!-- Text -->
-                    <a class="font-asul text-[24px] text-white" href="">Basics</a>
-                </div>
-
-                <!-- see more icon -->
-                <a href=""><img src="./img/yellow_arrow_right.png" alt=""></a>
-            </div>
+            <a class="mask w-full py-2 rounded flex flex-col items-center hover:bg-light-red" href="">
+                <img src="./img/combat_icon.png" alt="">
+                <span class="font-asul text-2xl text-slate-300">Basics</span>
+            </a>
 
             <!-- ========== 
             link list
             ========== -->
-            <ul class="mt-5 w-full flex flex-col items-start justify-center gap-1">
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Basic Game Info / Settings</a>
+            <ul class="mt-5 w-full flex flex-col items-start justify-center gap-2">
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Selecting A Weapon / Guardian Spirit</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Character</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Stances</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">The Shrine</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Ki Pulse</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">The Dojo</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Skills / Skill Trees</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Terminology</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Yokai Shift</a>
+                </li>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Doding / Guarding / Parrying</a>
+                </li>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Status Effects</a>
+                </li>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Advanced Tech</a>
                 </li>
             </ul>
         </div>
@@ -279,59 +276,42 @@
         <!-- ========== ==========
         Combat (Main Card 2)
         ========== ========== -->
-        <div class="my-6 lg:my-0 w-full md:h-[550px] p-6 rounded-xl flex flex-col items-start bg-[#5f1823]">
+        <div class="mask my-6 lg:my-0 md:h-[660px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
             <!-- ========== 
             top row 
             ========== -->
-            <div class="w-full flex justify-between items-center">
-                <!-- Icon and Text -->
-                <div class="flex items-center gap-4">
-                    <!-- Icon -->
-                    <img src="./img/combat_icon.png" alt="">
-
-                    <!-- Text -->
-                    <a class="font-asul text-[24px] text-white" href="">Combat</a>
-                </div>
-
-                <!-- see more icon -->
-                <a href=""><img src="./img/yellow_arrow_right.png" alt=""></a>
-            </div>
+            <a class="mask w-full py-2 rounded flex flex-col items-center hover:bg-light-red" href="">
+                <img src="./img/combat_icon.png" alt="">
+                <span class="font-asul text-2xl text-slate-300">Combat</span>
+            </a>
 
             <!-- ========== 
             link list
             ========== -->
-            <ul class="mt-5 w-full flex flex-col items-start justify-center gap-1">
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Selecting A Weapon & Guardian Spirit</a>
+            <ul class="mt-5 w-full flex flex-col items-start justify-center gap-2">
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Selecting A Weapon / Guardian Spirit</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Stances</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Stances</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Ki Pulse</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Ki Pulse</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Skills / Skill Trees</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Skills / Skill Trees</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Dodging / Guarding / Parrying</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Yokai Shift</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Yokai Shift & Burst Counters</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Doding / Guarding / Parrying</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Status Effects</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Status Effects</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Advanced Tech</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Advanced Tech</a>
                 </li>
             </ul>
         </div>
@@ -339,67 +319,48 @@
         <!-- ========== ==========
         Equipment (Main Card 3)
         ========== ========== -->
-        <div class="my-6 lg:my-0 w-full md:h-[550px] p-6 rounded-xl flex flex-col items-start bg-[#30171b]">
+        <div class="mask my-6 lg:my-0 md:h-[660px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
             <!-- ========== 
             top row 
             ========== -->
-            <div class="w-full flex justify-between items-center">
-                <!-- Icon and Text -->
-                <div class="flex items-center gap-4">
-                    <!-- Icon -->
-                    <img src="./img/equipment_icon.png" alt="">
-
-                    <!-- Text -->
-                    <a class="font-asul text-[24px] text-white" href="./equipment/equipment_index.html">Equipment</a>
-                </div>
-
-                <!-- see more icon -->
-                <a href="./equipment/equipment_index.html"><img src="./img/yellow_arrow_right.png" alt=""></a>
-            </div>
+            <a class="mask w-full py-2 rounded flex flex-col items-center hover:bg-light-red" href="">
+                <img src="./img/equipment_icon.png" alt="">
+                <span class="font-asul text-2xl text-slate-300">Equipment</span>
+            </a>
 
             <!-- ========== 
             link list
             ========== -->
-            <ul class="mt-5 w-full flex flex-col items-start justify-center gap-1">
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Weapons</a>
+            <ul class="mt-5 w-full flex flex-col items-start justify-center gap-2">
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Weapons</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Armor</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Armor</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Ninjutsu</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Ninjutsu</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Onmyo Magic</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Onmyo Magic</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Soul Cores</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Soul Cores</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Guardian Spirits</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Guardian Spirits</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Accessories</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Accessories</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Demon Parade Picture Scrolls</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Demon Parade Picture Scrolls</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Graces & Sets</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Graces & Sets</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Items</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Items</a>
                 </li>
             </ul>
         </div>
@@ -612,5 +573,4 @@
 <!-- Credits -->
 <!--
     - Website Development - LiuKang1080
-    - Website Design - Matsu
 -->
