Updated comments in main.js. Adjusted text in nioh2_TODO.txt. Added more content to nioh2.html.

--- a/nioh2/nioh2.html
+++ b/nioh2/nioh2.html
@@ -247,28 +247,22 @@
             ========== -->
             <ul class="mt-5 w-full flex flex-col items-start justify-center gap-2">
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Selecting A Weapon / Guardian Spirit</a>
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Recommended Settings</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Stances</a>
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Starting Recommendations</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Ki Pulse</a>
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Character Stats</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Skills / Skill Trees</a>
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">The Shrine</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Yokai Shift</a>
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">The Dojo</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Doding / Guarding / Parrying</a>
-                </li>
-                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Status Effects</a>
-                </li>
-                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Advanced Tech</a>
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">NG+ Cycles</a>
                 </li>
             </ul>
         </div>
@@ -290,9 +284,6 @@
             ========== -->
             <ul class="mt-5 w-full flex flex-col items-start justify-center gap-2">
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Selecting A Weapon / Guardian Spirit</a>
-                </li>
-                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
                     <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Stances</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
@@ -302,7 +293,7 @@
                     <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Skills / Skill Trees</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Yokai Shift</a>
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Yokai Shift & Burst Counters</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
                     <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Doding / Guarding / Parrying</a>
@@ -368,59 +359,39 @@
         <!-- ========== ==========
         World (Main Card 4)
         ========== ========== -->
-        <div class="my-6 lg:my-0 w-full md:h-[550px] p-6 rounded-xl flex flex-col items-start bg-medium-gray">
+        <div class="mask my-6 lg:my-0 md:h-[660px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
             <!-- ========== 
             top row 
             ========== -->
-            <div class="w-full flex justify-between items-center">
-                <!-- Icon and Text -->
-                <div class="flex items-center gap-4">
-                    <!-- Icon -->
-                    <img src="./img/world_icon.png" alt="">
-
-                    <!-- Text -->
-                    <a class="font-asul text-[24px] text-white" href="">World</a>
-                </div>
-
-                <!-- see more icon -->
-                <a href=""><img src="./img/yellow_arrow_right.png" alt=""></a>
-            </div>
+            <a class="mask w-full py-2 rounded flex flex-col items-center hover:bg-light-red" href="">
+                <img src="./img/combat_icon.png" alt="">
+                <span class="font-asul text-2xl text-slate-300">World</span>
+            </a>
 
             <!-- ========== 
             link list
             ========== -->
-            <ul class="mt-5 w-full flex flex-col items-start justify-center gap-1">
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Missions</a>
+            <ul class="mt-5 w-full flex flex-col items-start justify-center gap-2">
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Missions</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Enemies</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Enemies</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Bosses</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Bosses</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">The Underworld</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">The Underworld</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">The Depths of the Underworld</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">The Depths of the Underworld</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Kodama & Sudama</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Kodama & Sudama</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Other Characters</a>
-                </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Secrets</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Characters</a>
                 </li>
             </ul>
         </div>
@@ -428,51 +399,39 @@
         <!-- ========== ==========
         Tools & Resources (Main Card 5)
         ========== ========== -->
-        <div class="my-6 lg:my-0 w-full md:h-[550px] p-6 rounded-xl flex flex-col items-start bg-medium-gray">
+        <div class="mask my-6 lg:my-0 md:h-[660px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
             <!-- ========== 
             top row 
             ========== -->
-            <div class="w-full flex justify-between items-center">
-                <!-- Icon and Text -->
-                <div class="flex items-center gap-4">
-                    <!-- Icon -->
-                    <img src="./img/tools_icon.png" alt="">
-
-                    <!-- Text -->
-                    <a class="font-asul text-[24px] text-white" href="">Tools & Resources</a>
-                </div>
-
-                <!-- see more icon -->
-                <a href=""><img src="./img/yellow_arrow_right.png" alt=""></a>
-            </div>
+            <a class="mask w-full py-2 rounded flex flex-col items-center hover:bg-light-red" href="">
+                <img src="./img/combat_icon.png" alt="">
+                <span class="font-asul text-2xl text-slate-300">Tools & Resources</span>
+            </a>
 
             <!-- ========== 
             link list
             ========== -->
-            <ul class="mt-5 w-full flex flex-col items-start justify-center gap-1">
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Smithing Texts</a>
+            <ul class="mt-5 w-full flex flex-col items-start justify-center gap-2">
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Smithing Texts</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Attributes / Special Effects Table</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Temper Tables</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Blacksmith</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Blacksmith</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Farming</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Stone of Penance</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Builds</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Farming Resources</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Achievements</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Achievements</a>
+                </li>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Builds</a>
                 </li>
             </ul>
         </div>
@@ -480,51 +439,33 @@
         <!-- ========== ==========
         Online (Main Card 6)
         ========== ========== -->
-        <div class="my-6 lg:my-0 w-full md:h-[550px] p-6 rounded-xl flex flex-col items-start bg-medium-gray">
+        <div class="mask my-6 lg:my-0 md:h-[660px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
             <!-- ========== 
             top row 
             ========== -->
-            <div class="w-full flex justify-between items-center">
-                <!-- Icon and Text -->
-                <div class="flex items-center gap-4">
-                    <!-- Icon -->
-                    <img src="./img/online_icon.png" alt="">
-
-                    <!-- Text -->
-                    <a class="font-asul text-[24px] text-white" href="">Online</a>
-                </div>
-
-                <!-- see more icon -->
-                <a href=""><img src="./img/yellow_arrow_right.png" alt=""></a>
-            </div>
+            <a class="mask w-full py-2 rounded flex flex-col items-center hover:bg-light-red" href="">
+                <img src="./img/combat_icon.png" alt="">
+                <span class="font-asul text-2xl text-slate-300">Online</span>
+            </a>
 
             <!-- ========== 
             link list
             ========== -->
-            <ul class="mt-5 w-full flex flex-col items-start justify-center gap-1">
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Online Modes</a>
+            <ul class="mt-5 w-full flex flex-col items-start justify-center gap-2">
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Online Modes</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Matchmaking</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Matchmaking</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Hidden Tea House & Clans</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Hidden Tea House</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Revenants</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Revenants</a>
                 </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Benevolent Graves</a>
-                </li>
-                <li class="w-full py-2 rounded flex items-center gap-1 hover:bg-light-gray">
-                    <img src="./img/list_icon.png" alt="">
-                    <a class="w-full text-yellow-400" href="">Communities</a>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full font-asul text-xl text-yellow-400" href="">Benevolent Graves</a>
                 </li>
             </ul>
         </div>
@@ -544,7 +485,7 @@
                 Nioh 2 Wiki
             </a>
 
-            <span class="text-white">Devlopment: LiuKang1080</span>
+            <span class="text-white">Development: LiuKang1080</span>
         </div>
 
         <span class="text-[#4a454d]">&copy; 2023</span>
