--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
         lg:h-screen lg:flex-row lg:mt-0 lg:mb-0">
         
         <!-- Nioh 2 Card -->
-        <a href="./nioh2/nioh2.html" class="w-fit flex flex-col items-center bg-white border border-black">
+        <a href="./nioh2/nioh2.html" class="mask w-fit flex flex-col items-center bg-white border border-black">
             <img src="./img/nioh2_card.png" alt="">
             <span class="mt-4 mb-4 font-bold text-xl text-blue-500 hover:text-sky-500">Nioh 2 Wiki</span>
         </a>
 
         <!-- Wo Long Card -->
-        <a href="https://liukang1080.github.io/Nioh_Website/nioh2/nioh2_index.html" class="w-fit flex flex-col items-center bg-white border border-black">
+        <a href="https://liukang1080.github.io/Nioh_Website/nioh2/nioh2_index.html" class="mask w-fit flex flex-col items-center bg-white border border-black">
             <img src="./img/wolong_card.png" alt="">
-            <span class="mt-4 mb-4 font-bold text-xl text-blue-500 hover:text-sky-500">Wo Long Wiki</span>
+            <span class="mt-4 mb-4 font-bold text-xl text-blue-500 hover:text-sky-500">Wo Long: Fallen Dynasty Wiki</span>
         </a>
     </section>
 
